@@ -18,6 +18,9 @@ See the end for copying conditions.
    have incorrectly used CryptoPro-A S-BOX instead of proper (CryptoPro-B/-C/-D
    S-BOXes). They are fixed now.
 
+** libgnutls: gnutls_priority_init() and friends, allow the CTYPE-OPENPGP keyword
+   in the priority string. It is only accepted as legacy option and is ignored.
+
 ** p11tool: Fix initialization of security officer's PIN with the --initialize-so-pin
    option (#561)
 
